Use Prime Helm chart repo

--- a/versions/latest/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -51,17 +51,16 @@ You'll use the backup as a restore point if something goes wrong during upgrade.
 . Update your local Helm repo cache.
 +
 ----
- helm repo update
+helm repo update
 ----
 
 . Get the repository name that you used to install Rancher.
 +
 ----
- helm repo list
+helm repo list
 
- NAME          	       URL
- rancher-prime         <URL>
- rancher-<CHART_REPO>	 https://releases.rancher.com/server-charts/<CHART_REPO>
+NAME          	       URL
+rancher-prime          <helm-chart-repo-url>
 ----
 
 . Fetch the latest chart to install Rancher from the Helm chart repository.
@@ -110,11 +109,11 @@ There will be more values that are listed with this command. This is just an exa
 [TIP]
 ====
 
-Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
+Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
 Thus:
 
 ----
-helm get values rancher-stable -n cattle-system
+helm get values rancher-prime -n cattle-system
 
 hostname: rancher.my.org
 ----
@@ -147,11 +146,11 @@ The above is an example, there may be more values from the previous step that ne
 [TIP]
 ====
 
-If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
+If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
 Thus:
 
 ----
-helm upgrade rancher-stable rancher-prime/rancher \
+helm upgrade rancher-prime rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
