--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -70,27 +70,12 @@ To set up Rancher,
 
 === 1. Add the Helm Chart Repository
 
-Use `helm repo add` command to add the Helm chart repository that contains charts to install Rancher. For more information about the repository choices and which is best for your use case, see xref:[Choosing a Rancher Version].
+Use the `helm repo add` command to add the Helm chart repository that contains charts to install Rancher Prime.
 
-* Latest: Recommended for trying out the newest features
-+
+[,shell]
 ----
-  helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
+helm repo add rancher-prime <helm-chart-repo-url>
 ----
-
-* Stable: Recommended for production environments
-+
-----
-  helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
-----
-
-* Alpha: Experimental preview of upcoming releases.
-+
-----
-  helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
-----
-+
-NOTE: Upgrades are not supported to, from, or between Alphas.
 
 === 2. Create a Namespace for Rancher
 
@@ -227,12 +212,6 @@ helm install rancher rancher-<CHART_REPO>/rancher \
   --set bootstrapPassword=admin
 ----
 
-If you are installing an alpha version, Helm requires adding the `--devel` option to the install command:
-
-----
-helm install rancher rancher-alpha/rancher --devel
-----
-
 Wait for Rancher to be rolled out:
 
 ----
@@ -280,12 +259,6 @@ helm install rancher rancher-<CHART_REPO>/rancher \
   --set letsEncrypt.ingress.class=nginx
 ----
 
-If you are installing an alpha version, Helm requires adding the `--devel` option to the install command:
-
-----
-helm install rancher rancher-alpha/rancher --devel
-----
-
 Wait for Rancher to be rolled out:
 
 ----
@@ -322,12 +295,6 @@ helm install rancher rancher-<CHART_REPO>/rancher \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
   --set ingress.tls.source=secret
-----
-
-If you are installing an alpha version, Helm requires adding the `--devel` option to the install command:
-
-----
-helm install rancher rancher-alpha/rancher --devel
 ----
 
 If you are using a Private CA signed certificate , add `--set privateCA=true` to the command:
