--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -19,38 +19,34 @@ Rancher recommends installing Rancher on a Kubernetes cluster. A highly availabl
 From a system that has access to the internet, fetch the latest Helm chart and copy the resulting manifests to a system that has access to the Rancher server cluster.
 
 . If you haven't already, install `helm` locally on a workstation that has internet access. Note: Refer to the xref:installation-and-upgrade/requirements/helm-version-requirements.adoc[Helm version requirements] to choose a version of Helm to install Rancher.
-. Use `helm repo add` command to add the Helm chart repository that contains charts to install Rancher. For more information about the repository choices and which is best for your use case, see xref:[Choosing a Rancher Version].
- ** Latest: Recommended for trying out the newest features
+. Use the `helm repo add` command to add the Helm chart repository that contains charts to install Rancher Prime.
 +
+[,shell]
 ----
-  helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
+helm repo add rancher-prime <helm-chart-repo-url>
 ----
 
- ** Stable: Recommended for production environments
+. Fetch the Rancher Prime chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
+** To fetch the latest version:
 +
+[,shell]
 ----
-  helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
+helm fetch rancher-prime/rancher
 ----
-
- ** Alpha: Experimental preview of upcoming releases.
+** To fetch a specific version:
 +
-----
-  helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
-----
+Check to see which version of Rancher Prime are available.
 +
-NOTE: Upgrades are not supported to, from, or between Alphas.
-. Fetch the latest Rancher chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
-+
-[,plain]
+[,shell]
 ----
- helm fetch rancher-<CHART_REPO>/rancher
+helm search repo --versions rancher-prime
 ----
 +
-If you require a specific version of Rancher, you can fetch this with the Helm `--version` parameter like in the following example:
+Fetch a specific version by specifying the `--version` parameter:
 +
-[,plain]
+[,shell]
 ----
- helm fetch rancher-stable/rancher --version=v2.4.8
+helm fetch rancher-prime/rancher --version=<version>
 ----
 
 === 2. Choose your SSL Configuration
