--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -20,8 +20,6 @@ The kubeconfig can also be manually targeted for the intended cluster with the `
 
 Review the list of known issues for each Rancher version, which can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums.]
 
-Note that upgrades _to_ or _from_ any chart in the xref:#_helm_chart_repositories[rancher-alpha repository] aren't supported.
-
 === Helm Version
 
 include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
@@ -53,40 +51,16 @@ You'll use the backup as a restore point if something goes wrong during upgrade.
 . Update your local Helm repo cache:
 +
 ----
- helm repo update
+helm repo update
 ----
 
 . Get the repository name that you used to install Rancher.
 +
-For information about the repos and their differences, see xref:#_helm_chart_repositories[Helm Chart Repositories].
+----
+helm repo list
 
- ** Latest: Recommended for trying out the newest features
-+
-----
-  helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
-----
-
- ** Stable: Recommended for production environments
-+
-----
-  helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
-----
-
- ** Alpha: Experimental preview of upcoming releases.
-+
-----
-  helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
-----
-+
-NOTE: Upgrades are not supported to, from, or between Alphas.
-
-+
-----
- helm repo list
-
- NAME          	       URL
- stable        	       https://charts.helm.sh/stable
- rancher-<CHART_REPO>	 https://releases.rancher.com/server-charts/<CHART_REPO>
+NAME          	       URL
+rancher-prime          <helm-chart-repo-url>
 ----
 +
 
@@ -142,11 +116,11 @@ There will be more values that are listed with this command. This is just an exa
 [TIP]
 ====
 
-Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
+Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
 Thus:
 
 ----
-helm get values rancher-stable -n cattle-system
+helm get values rancher-prime -n cattle-system
 
 hostname: rancher.my.org
 ----
@@ -179,11 +153,11 @@ The above is an example, there may be more values from the previous step that ne
 [TIP]
 ====
 
-If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
+If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
 Thus:
 
 ----
-helm upgrade rancher-stable rancher-<CHART_REPO>/rancher \
+helm upgrade rancher-prime rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
