--- a/versions/v2.8/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -164,7 +164,7 @@ For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when u
 
 [,bash]
 ----
-helm install rancher rancher-latest/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=<same hostname as the server URL from the first Rancher server> \
   --version x.y.z
@@ -184,7 +184,7 @@ These values can be reused using the `rancher-values.yaml` file. Be sure to swit
 
 [,bash]
 ----
-helm install rancher rancher-latest/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
+helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
 ----
 ====
 
