--- a/versions/v2.8/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.8/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -256,14 +256,14 @@ Then, run the command:
 
 [,bash]
 ----
-helm upgrade --install rancher rancher-latest/rancher --namespace cattle-system --reuse-values --values PATH/TO/values.yaml
+helm upgrade --install rancher rancher-prime/rancher --namespace cattle-system --reuse-values --values PATH/TO/values.yaml
 ----
 
 You can instead specify the webhook version directly on the command-line:
 
 [,bash]
 ----
-helm upgrade --install rancher rancher-latest/rancher --namespace cattle-system --reuse-values \
+helm upgrade --install rancher rancher-prime/rancher --namespace cattle-system --reuse-values \
     --set extraEnv[0].name=CATTLE_RANCHER_WEBHOOK_VERSION \
     --set extraEnv[0].value=103.0.2+up0.4.3
 ----
