--- a/versions/latest/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -102,7 +102,7 @@ To see options on how to customize the cert-manager install (including for cases
 
 
 ----
-helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
+helm repo add rancher-prime <helm-chart-repo-url>
 
 kubectl create namespace cattle-system
 
@@ -131,14 +131,14 @@ For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when u
 See xref:../../installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirements.
 
 ----
-helm install rancher rancher-latest/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io \
   --set replicas=1 \
   --set bootstrapPassword=<PASSWORD_FOR_RANCHER_ADMIN>
 
 # Windows Powershell
-helm install rancher rancher-latest/rancher `
+helm install rancher rancher-prime/rancher `
   --namespace cattle-system `
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io `
   --set replicas=1 `
