--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -121,7 +121,7 @@ The below steps update the Helm values for the Rancher chart, so the Rancher pod
 +
 [,bash]
 ----
-    helm upgrade rancher rancher-stable/rancher \
+    helm upgrade rancher rancher-prime/rancher \
      --namespace cattle-system \
      -f values.yaml \
      --version <DEPLOYED_RANCHER_VERSION>
@@ -280,7 +280,7 @@ The below steps update the Helm values for the Rancher chart, so the Rancher pod
 +
 [,bash]
 ----
-    helm upgrade rancher rancher-stable/rancher \
+    helm upgrade rancher rancher-prime/rancher \
 --namespace cattle-system \
 -f values.yaml \
 --version <DEPLOYED_RANCHER_VERSION>
