--- a/versions/v2.9/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.9/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -37,19 +37,12 @@ When installing Rancher with a Helm chart, use the `--set` option. In the below 
 For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
 
 ----
-helm install rancher rancher-latest/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
   --set 'extraEnv[0].value=<FEATURE-FLAG-NAME-1>=true,<FEATURE-FLAG-NAME-2>=true'
 ----
-
-[NOTE]
-====
-
-If you are installing an alpha version, Helm requires adding the `--devel` option to the command.
-====
-
 
 === Enabling Features for Air Gap Installs
 
